# ReadOIFITS

./: .gitignore  LICENSE  README.md  ReadOIFITS.py  meta.yaml  pyproject.toml  setup.py  test.py
ReadOIFITS/: __init__.py
docs/: conf.py  index.rst
docs/source/: ReadOIFITS.rst  api.rst  conf.py  index.rst  modules.rst  usage.rst
examples/: test.fits  test.py
src/ReadOIFITS/: ReadOIFITS.py  ReadOIFITS.yml
src/readOIFITS.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
