[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "readOIFITS"
version = "0.0.5"
authors = [
  { name="Jacques Kluska", email="jacques.kluska@kuleuven.be" },
]
description = "A package to read OIFITS files"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/kluskaj/ReadOIFITS"
"Bug Tracker" = "https://github.com/kluskaj/ReadOIFITS/issues"
